[package]
name = "pandamonium"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.174"
png = "0.17.16"
tar = "0.4.44"
tiled = "0.15.0"
rust-libretro = {  version = "0.3.2", features = [ "unstable-env-commands" ] }
derive = { path = "./derive" }
engine = { path = "./engine" }
itertools = "0.14.0"