[package]
name = "pandamonium"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "export_assets"
path = "src/export.rs"


[dependencies]
libc = "0.2.174"
png = "0.17.16"
tiled = "0.15.0"
rust-libretro = {  version = "0.3.2", features = [ "unstable-env-commands" ] }
serde_json = "1.0.150"
derive = { path = "./derive" }
engine = { path = "./engine" }