[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
png = "0.17.16"
tiled = "0.15.0"
glob = "0.3.3"
googletest = "0.9.0"
rust-libretro = {  version = "0.3.2", features = [ "unstable-env-commands" ] }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"